--- a/components/TextComposer/style.scss
+++ b/components/TextComposer/style.scss
@@ -3,7 +3,11 @@
   font-size: 55px;
   background-color: lightblue;
 
-  :hover {
+  &:hover {
     cursor: text;
   }
+}
+
+.composer[contenteditable="false"] {
+  background-color: #ebebeb;
 }
