Added prepositional phrase.

--- a/assets/styles/css/reset.css
+++ b/assets/styles/css/reset.css
@@ -70,3 +70,8 @@ input {
     color: purple;
     text-decoration: underline;
 }
+
+.phrase--pp {
+    color: dodgerblue;
+    text-decoration: underline;
+}
