--- a/components/TextComposer/style.scss
+++ b/components/TextComposer/style.scss
@@ -5,6 +5,7 @@
   line-height: 2.5em;
   padding: 10px;
   background-color: #fff6dc;
+  border: 1px solid #ebebeb;
 
   &:hover {
     cursor: text;
