--- a/assets/styles/css/reset.css
+++ b/assets/styles/css/reset.css
@@ -62,32 +62,37 @@ html {
 }
 
 .annotation {
-    font-size: 14px;
+    font-size: 18px;
+    font-family: 'Patrick Hand', cursive;
 }
 
 .hide-tags .phrase {
     color: black;
-    text-decoration: none;
+    background-color: transparent;
 }
 
-.phrase--np {
-    color: red;
-    text-decoration: underline;
+.phrase {
+    padding: 0 5px 0 3px;
 }
 
-.phrase--sbar {
-    color: purple;
-    text-decoration: underline;
+.phrase--np, .mode--np {
+    color: white;
+    background-color: red;
 }
 
-.phrase--pp {
-    color: dodgerblue;
-    text-decoration: underline;
+.phrase--sbar, .mode--sbar {
+    color: white;
+    background-color: purple;
 }
 
-.phrase--s {
-    color: green;
-    text-decoration: underline;
+.phrase--pp, .mode--pp {
+    color: white;
+    background-color: blue;
+}
+
+.phrase--s, .mode--s {
+    color: white;
+    background-color: green;
 }
 
 .warning {
